--- a/FeedbackAnalysisAI.BLL/FeedbackAnalysisAI.BLL.csproj
+++ b/FeedbackAnalysisAI.BLL/FeedbackAnalysisAI.BLL.csproj
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.4.0-preview1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.4.0-preview1" />
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+    <PackageReference Include="System.Security.Principal" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
